Remove unused `Add-Opens` directive